Alignment Fixed

--- a/WeatherApp/style.css
+++ b/WeatherApp/style.css
@@ -126,6 +126,7 @@ label a{
 
 .weatherMain {
     font-family: sans-serif;
+    font-size: 1.7rem;
 }
 
 #todayTime,
